// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewTemplateDetailsAuthoringLetter matches snapshot for AUTHORING letter 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example AUTHORING letter
    </h1>
  </div>
  <p
    class="nhsuk-u-margin-bottom-4"
  >
    <a
      data-testid="edit-name-link"
      href="#"
    >
      Edit name
    </a>
  </p>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview authoringLetterDetails"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Total pages
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          1
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Sheets
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          2
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="sheets-action"
            href="https://notify.nhs.uk/pricing-and-commercial/letters"
          >
            Learn more
            <span
              class="nhsuk-u-visually-hidden"
            >
               about sheets
            </span>
          </a>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Printing and postage
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          variant-123
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="printing-postage-action"
            href="#"
          >
            Edit
            <span
              class="nhsuk-u-visually-hidden"
            >
               printing and postage
            </span>
          </a>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--yellow"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Approval needed
          </strong>
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="status-action"
            href="https://notify.nhs.uk/templates/what-template-statuses-mean"
          >
            Learn more
            <span
              class="nhsuk-u-visually-hidden"
            >
               about status
            </span>
          </a>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsAuthoringLetter matches snapshot when letterVariantId is absent 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example AUTHORING letter without variant
    </h1>
  </div>
  <p
    class="nhsuk-u-margin-bottom-4"
  >
    <a
      data-testid="edit-name-link"
      href="#"
    >
      Edit name
    </a>
  </p>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview authoringLetterDetails"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Total pages
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          2
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        />
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Sheets
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          4
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="sheets-action"
            href="https://notify.nhs.uk/pricing-and-commercial/letters"
          >
            Learn more
            <span
              class="nhsuk-u-visually-hidden"
            >
               about sheets
            </span>
          </a>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row missingValue"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Printing and postage
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        />
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="printing-postage-action"
            href="#"
          >
            Edit
            <span
              class="nhsuk-u-visually-hidden"
            >
               printing and postage
            </span>
          </a>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--yellow"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Approval needed
          </strong>
        </dd>
        <dd
          class="nhsuk-summary-list__actions"
        >
          <a
            data-testid="status-action"
            href="https://notify.nhs.uk/templates/what-template-statuses-mean"
          >
            Learn more
            <span
              class="nhsuk-u-visually-hidden"
            >
               about status
            </span>
          </a>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsEmail matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example Email template
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Email
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
            data-status="submitted"
            data-testid="status-tag"
          >
            Submitted
          </strong>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-0"
            id="preview-heading-subject"
          >
            Subject
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-0"
            id="preview-content-subject"
          >
            email subject
          </div>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-1"
            id="preview-heading-message"
          >
            Message
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-1"
            id="preview-content-message"
          >
            <p>
              email content
            </p>
            

          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsLetter if status is NOT_YET_SUBMITTED, then Not yet submitted is displayed 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Not yet submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsLetter if status is PROOF_AVAILABLE, but no proofs are registered on the template, proof section is hidden (this is unexpected) 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--orange"
            data-status="proof-available"
            data-testid="status-tag"
          >
            Proof available
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsLetter matches snapshot when proofs are present, proofs failing virus scan are not displayed 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--orange"
            data-status="proof-available"
            data-testid="status-tag"
          >
            Proof available
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Example personalisation file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.csv
            </p>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template proof files
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <ul
            class="proofs"
          >
            <li>
              <a
                data-testid="proof-link_a.pdf"
                href="/templates/files/client-id/proofs/template-id/a.pdf"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="container"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    height="26"
                    viewBox="0 0 20 26"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                      fill="#4C6272"
                    />
                  </svg>
                  <p
                    class="text"
                  >
                    a.pdf
                  </p>
                </div>
              </a>
            </li>
            <li>
              <a
                data-testid="proof-link_b.pdf"
                href="/templates/files/client-id/proofs/template-id/b.pdf"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="container"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    height="26"
                    viewBox="0 0 20 26"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                      fill="#4C6272"
                    />
                  </svg>
                  <p
                    class="text"
                  >
                    b.pdf
                  </p>
                </div>
              </a>
            </li>
          </ul>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsLetter matches snapshot when test data CSV is absent 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example template
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter - French
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--blue"
            data-status="pending-validation"
            data-testid="status-tag"
          >
            Checking files
          </strong>
          <small
            class="preview__statusnote nhsuk-body-s nhsuk-u-margin-top-2 nhsuk-u-secondary-text-color"
          >
            Refresh the page to update the status
          </small>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsLetter matches snapshot without proofs 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example template
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter - French
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--blue"
            data-status="pending-validation"
            data-testid="status-tag"
          >
            Checking files
          </strong>
          <small
            class="preview__statusnote nhsuk-body-s nhsuk-u-margin-top-2 nhsuk-u-secondary-text-color"
          >
            Refresh the page to update the status
          </small>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.pdf
            </p>
          </div>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Example personalisation file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              file.csv
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsNhsApp matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Example template
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          NHS App message
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--green"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Draft
          </strong>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-0"
            id="preview-heading-message"
          >
            Message
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-0"
            id="preview-content-message"
          >
            <p>
              app content
            </p>
            

          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`PreviewTemplateDetailsSms matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      SMS template
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-id
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Text message (SMS)
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--grey"
            data-status="submitted"
            data-testid="status-tag"
          >
            Submitted
          </strong>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          <div
            data-testid="preview__heading-0"
            id="preview-heading-message"
          >
            Message
          </div>
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="preview__content"
            data-testid="preview__content-0"
            id="preview-content-message"
          >
            <p>
              SMS content
            </p>
            

          </div>
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
